Checkpoint 2: Added POST endpoint 'api/movie' for saving movie details
- Refactored code for reusability by adding methods to resources'.py files
